Add more into health API schema
